<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.destrostudios.cards</groupId>
        <artifactId>shared</artifactId>
        <version>0.0.1</version>
    </parent>
    <artifactId>rules</artifactId>
    <packaging>jar</packaging>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.destrostudios.cards</groupId>
            <artifactId>entities</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.destrostudios.cards</groupId>
            <artifactId>entities-templates</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.destrostudios.cards</groupId>
            <artifactId>events</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.destrostudios.cards</groupId>
            <artifactId>model</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.destrostudios.cards</groupId>
            <artifactId>files</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.destrostudios.game-tools</groupId>
            <artifactId>network-shared</artifactId>
            <version>${version.game-tools}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-jexl3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>
</project>